2010-07-22  Paul Fitzpatrick  <paulfitz@debian.humanoids.iit.it>

	* example/swig/CMakeLists.txt: fix out-of-source python build
	(thanks Tomassino Ferrauto)

2010-07-21  Paul Fitzpatrick  <paulfitz@alum.mit.edu>

	* conf/YarpOptions.cmake: ENABLE_FORCE_RPATH option for setting
	rpath - applied patch from Alexis Maldonado.  Purpose:
	ROS-friendliness.

	* src/modules/opencv/CMakeLists.txt: add missing link command
	(thanks again Juan!)

	* example/dev/FakeFrameGrabber.h: add missing header file
	(thanks Juan G Victores)

2010-07-14  Marco Randazzo  <marco.randazzo@iit.it>

    * src/libYARP_dev/include/yarp/dev/ControlBoardInterfaces.h
    * src/libYARP_dev/include/yarp/dev/ControlBoardInterfacesImpl.h
    * src/libYARP_dev/src/ControlBoardInterfacesImpl.cpp
    * src/libYARP_dev/src/RemoteControlBoard.cpp
	the methods setTorque of ITorqueControl interface has been
	renamed to setRefTorque.

2010-07-09  Marco Randazzo  <marco.randazzo@iit.it>

    * src/libYARP_dev/include/yarp/dev/ControlBoardInterfaces.h
    * src/libYARP_dev/include/yarp/dev/ControlBoardInterfacesImpl.h
    * src/libYARP_dev/include/yarp/dev/ControlBoardInterfacesImpl.inl
    * src/libYARP_dev/src/ControlBoardInterfacesImpl.cpp
    * src/libYARP_dev/src/RemoteControlBoard.cpp
	Fixed the signature of various functions related to IOpenLoopControl.
	
2010-07-08  Marco Randazzo  <marco.randazzo@iit.it>

    * src/libYARP_dev/include/yarp/dev/ControlBoardInterfaces.h
    * src/libYARP_dev/include/yarp/dev/ControlBoardInterfacesImpl.h
    * src/libYARP_dev/src/ControlBoardInterfacesImpl.cpp
    * src/libYARP_dev/src/RemoteControlBoard.cpp
	Added IImpedanceControl interface, IImpedanceControlRaw interface.
	The new methods allow to set the impedance (stiffness/damping) at
    the joint level. 
	
2010-07-08  Paul Fitzpatrick  <paulfitz@nominal.csail.mit.edu>

	* src/libYARP_dev/src/Drivers.cpp: change default name of 
	"quit" ports for yarpdev when no name argument is supplied.