@@ -9,6 +9,7 @@
 
 #include <yarp/os/Property.h>
 #include <yarp/os/Bottle.h>
+#include <yarp/os/impl/BottleImpl.h>
 #include <yarp/os/impl/Logger.h>
 #include <yarp/os/impl/StringInputStream.h>
 #include <yarp/os/impl/NetType.h>
@@ -318,6 +319,9 @@ public:
             String buf;
             bool good = true;
             buf = NetType::readLine(sis,'\n',&good);
+            while (good && !BottleImpl::isComplete(buf.c_str())) {
+                buf += NetType::readLine(sis,'\n',&good);
+            }
             if (!good) {
                 done = true;
             }
